--- a/estilos.css
+++ b/estilos.css
@@ -24,20 +24,37 @@ main{
     place-content: center;
 }
 
+.main-content-wrapper{
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
+    justify-items: center;
+    gap: 30px;
+}
+
 .calculator-wrapper{
     height: auto;
     width: 360px;
     margin: 40px 0;
-    padding: 20px;
     box-shadow: 4px 12px 15px 4px rgba(0,0,0,0.3);
-    border: 1px solid rgba(0,0,0,0.1);
+    /* border: 1px solid rgba(0,0,0,0.1); */
     border-radius: 12px;
+    overflow: hidden;
+}
+
+.calculator-title{
+    background-color: #2c4257;
+    padding: 20px;
+    color: white;
 }
 
 .calculator-inputs-container{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 20px;
 }
 
 .calculator-inputs-container h5{
@@ -49,6 +66,9 @@ main{
 .data-container{
     height: auto;
     width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .data-input{
@@ -76,10 +96,10 @@ main{
 .calculator-result-container{
     width: 90%;
     height: 60px;
-    margin: 12px;
+    margin: 12px auto;
     padding: 8px;
     border-radius: 6px;
-    background-color: #8beb58;
+    background-color: #9eff6a;
     font-size: 14px;    
     font-weight: 500;
     color: #34820a ;
@@ -89,4 +109,18 @@ main{
     margin-top: 6px;
     font-size: 16px;
     font-weight: 700;
+}
+
+.button{
+    height: 32px;
+    padding: 0 6px;
+    margin-top: 12px;
+    margin-bottom: 16px;
+    border: none;
+    border-radius: 8px;
+    background-color: #fbba49;
+    font-size: 14px;
+    font-weight: 700;
+    color: white;
+    cursor: pointer;
 }
